@@ -1,3 +1,12 @@
+2011-05-16  MORITA Hajime  <morrita@google.com>
+
+        Unreviewed build fix for r86647, which broke SUPPORT_AUTOCORRECTION_PANEL.
+
+        * editing/SpellingCorrectionController.cpp:
+        (WebCore::markersHaveIdenticalDescription):
+        (WebCore::SpellingCorrectionController::recordSpellcheckerResponseForModifiedCorrection):
+        (WebCore::SpellingCorrectionController::processMarkersOnTextToBeReplacedByResult):
+
 2011-05-16  Kent Tamura  <tkent@chromium.org>
 
         Fix Leopard build.
